@@ -6,6 +6,9 @@ Change History
 1.5 (unreleased)
 ================
 
+- Add support for arbitrary csvsource fmtparam options.
+  [rpatterson]
+
 - Fix folders source when a view of the same name is registered.
   [rpatterson]
 
